syntax = "proto3";

package dastchain.dex;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "dastchain/dex/params.proto";
import "dastchain/dex/sell_order_book.proto";
import "dastchain/dex/buy_order_book.proto";
import "dastchain/dex/denom_trace.proto";

option go_package = "dastchain/x/dex/types";

// GenesisState defines the dex module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params        params            = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
           string        port_id           = 2;
  repeated SellOrderBook sellOrderBookList = 3 [(gogoproto.nullable) = false] ;
  repeated BuyOrderBook  buyOrderBookList  = 4 [(gogoproto.nullable) = false] ;
  repeated DenomTrace    denomTraceList    = 5 [(gogoproto.nullable) = false] ;
}

